feat: implement register and get trainer/trainee using Spring Boot